--- a/css/iuapmobile.um.css
+++ b/css/iuapmobile.um.css
@@ -6,10 +6,7 @@ CSS base
 * @type : Mobile Development
 * @author : gct@yonyou.com
 */
-/*********20160810 *********/
-/*** from scss/um/Common/variables.scss ***/
-/*** from scss/um/Mixins/_commin.scss ***/
-/*** from scss/um/Common/base.scss ***/
+
 /*    v3.0.20160726   */
 dl, dt, dd, ul, ol, li, pre, form, p, fieldset, input, textarea, blockquote, th, td, button {
   margin: 0;
@@ -90,7 +87,7 @@ body {
 }
 
 a {
-  color: #007aff;
+  color: #2dbb69;
   text-decoration: none;
   cursor: pointer;
 }
@@ -1709,7 +1706,7 @@ a {
 }
 
 .um-ani-rotate:before {
-  color: #007aff;
+  color: #2dbb69;
   font-size: 20.4px;
   display: inline-block;
   vertical-align: middle;
@@ -2784,7 +2781,7 @@ a {
   display: block;
 }
 .um-box-justify > a:active, .um-box-justify > a.active {
-  color: #007aff;
+  color: #2dbb69;
 }
 
 .um-css3-hc {
@@ -2935,8 +2932,8 @@ input[type="radio"]:checked ~ .um-icon-checkbox:before, input[type="checkbox"]:c
   display: inline-block;
   width: 14px;
   height: 14px;
-  border-left: 3px solid #007aff;
-  border-bottom: 3px solid #007aff;
+  border-left: 3px solid #2dbb69;
+  border-bottom: 3px solid #2dbb69;
   -webkit-transform: rotate(45deg);
   transform: rotate(45deg);
   margin: 0px 0px 0xp 0px;
@@ -2978,7 +2975,7 @@ input[type="radio"]:checked ~ .um-icon-checkbox:before, input[type="checkbox"]:c
   border-width: 1px 0 0 0;
 }
 
-.um-border-bottom, .um-header, .um-header-light {
+.um-border-bottom, .um-header {
   -webkit-border-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAAECAYAAABP2FU6AAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAB5JREFUeNpiPnH8zH/G////MzAxAAHTyRNn/wMEGABpvQm9g9TJ1QAAAABJRU5ErkJggg==") 2 0 stretch;
   border-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAAECAYAAABP2FU6AAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAB5JREFUeNpiPnH8zH/G////MzAxAAHTyRNn/wMEGABpvQm9g9TJ1QAAAABJRU5ErkJggg==") 2 0 stretch;
   border-width: 0 0 1px 0;
@@ -3079,7 +3076,7 @@ input[type="radio"]:checked ~ .um-icon-checkbox:before, input[type="checkbox"]:c
 }
 
 .um-blue {
-  color: #007aff;
+  color: #2dbb69;
 }
 
 .um-purple {
@@ -3123,7 +3120,7 @@ input[type="radio"]:checked ~ .um-icon-checkbox:before, input[type="checkbox"]:c
 }
 
 .um-bgc-blue {
-  background-color: #007aff;
+  background-color: #2dbb69;
 }
 
 .um-bgc-purple {
@@ -3174,10 +3171,10 @@ input[type="radio"]:checked ~ .um-icon-checkbox:before, input[type="checkbox"]:c
   vertical-align: middle;
   touch-action: manipulation;
   cursor: pointer;
-  color: #007aff;
+  color: #2dbb69;
   background-color: #ffffff;
   background-image: none;
-  border: 1px solid #007aff;
+  border: 1px solid #2dbb69;
   -webkit-user-select: none;
   padding: 9px 12px;
   font-size: 17px;
@@ -3206,7 +3203,7 @@ input[type="radio"]:checked ~ .um-icon-checkbox:before, input[type="checkbox"]:c
 
 /*带填充的btn*/
 .btn-bg {
-  background-color: #007aff;
+  background-color: #2dbb69;
   color: #ffffff;
 }
 
@@ -3272,11 +3269,11 @@ input[type="radio"]:checked ~ .um-icon-checkbox:before, input[type="checkbox"]:c
 
 .um-btn {
   color: #fff;
-  background-color: #007aff;
-  border-color: #007aff;
+  background-color: #2dbb69;
+  border-color: #2dbb69;
 }
 .um-btn .badge {
-  color: #007aff;
+  color: #2dbb69;
   background-color: #fff;
 }
 
@@ -3542,7 +3539,7 @@ html.um-frame {
 }
 
 /*********gct dev**********************/
-.um-header-title, .um-header h3, .um-header-light h3 {
+.um-header-title, .um-header h3 {
   font-size: 1em;
   text-align: center;
   display: block;
@@ -3559,28 +3556,8 @@ html.um-frame {
 .um-header {
   position: relative;
   min-height: 44px;
-  background-color: #007aff;
+  background-color: #2dbb69;
   z-index: 5;
-}
-
-.um-header-light {
-  position: relative;
-  min-height: 44px;
-  background-color: #f6f6f6;
-  z-index: 5;
-}
-.um-header-light h3 {
-  color: #007aff;
-}
-.um-header-light .um-back, .um-header-light .um-header-right, .um-header-light .um-header-left {
-  color: #007aff;
-}
-.um-header-light .um-back:before {
-  border-left: 2px solid #007aff;
-  border-bottom: 2px solid #007aff;
-}
-.um-header-light .um-header-btns {
-  color: #007aff;
 }
 
 .um-header-personal {
@@ -3589,7 +3566,7 @@ html.um-frame {
   background-position: left top;
   background-size: 100% 100%;
   height: 140px;
-  background-color: #007aff;
+  background-color: #2dbb69;
 }
 
 .um-header-btns {
@@ -3638,7 +3615,7 @@ html.um-frame {
 .um-header-left.btn,
 .um-header-left.btn-bg,
 .um-header-left.um-btn {
-  color: #007aff;
+  color: #2dbb69;
 }
 .um-back:hover, .um-back:active,
 .um-header-right:hover,
@@ -3703,7 +3680,7 @@ html.um-frame {
   transition: color ease .3s;
 }
 .um-footerbar-item.active {
-  color: #007aff;
+  color: #2dbb69;
 }
 .um-footerbar-item img {
   margin: 0 auto;
@@ -3870,7 +3847,7 @@ input[type="number"].form-control {
 }
 .um-input-search .form-control + .um-input-cancle {
   display: none;
-  color: #007aff;
+  color: #2dbb69;
   -webkit-box-flex: 1;
   box-flex: 1;
   -webkit-flex: 1;
@@ -4108,7 +4085,7 @@ input[type="number"].form-control {
   position: relative;
   overflow: hidden;
   margin: 30px -15px 0;
-  color: #007aff;
+  color: #2dbb69;
 }
 
 .um-check-group-item {
@@ -4190,7 +4167,7 @@ input[type="number"].form-control {
   position: relative;
   display: inline-block;
   vertical-align: middle;
-  color: #007aff;
+  color: #2dbb69;
   padding-left: 20px;
 }
 .um-check-inline .um-icon-checkbox {
@@ -4482,7 +4459,7 @@ input[type="number"].form-control {
   transform: translate3d(0, 0, 0);
 }
 .um-actionsheet .btn, .um-share .btn, .um-actionsheet .btn-bg, .um-share .btn-bg, .um-actionsheet .um-btn, .um-share .um-btn {
-  color: #007aff;
+  color: #2dbb69;
   padding-top: 7px;
   padding-bottom: 7px;
   text-align: center;
@@ -4505,7 +4482,7 @@ input[type="number"].form-control {
   background-color: #fff;
 }
 .um-share .btn, .um-share .btn-bg, .um-share .um-btn {
-  border-color: #007aff;
+  border-color: #2dbb69;
   border-radius: 5px;
 }
 
@@ -4514,6 +4491,7 @@ input[type="number"].form-control {
   left: 0;
   right: 0;
   bottom: 0;
+  margin: 0 -15px;
   -webkit-transition: -webkit-transform ease .3s;
   transition: transform ease .3s;
   z-index: 9999;
@@ -4525,7 +4503,7 @@ input[type="number"].form-control {
   transform: translate3d(0, 0, 0);
 }
 .um-poppicker .btn, .um-poppicker .btn-bg, .um-poppicker .um-btn {
-  color: #007aff;
+  color: #2dbb69;
   text-align: right;
   padding-right: 23px;
 }
@@ -4544,7 +4522,7 @@ input[type="number"].form-control {
   display: box;
   display: -webkit-flex;
   display: flex;
-  border: 1px solid #007aff;
+  border: 1px solid #2dbb69;
   border-radius: 5px;
   background-color: #fff;
 }
@@ -4558,7 +4536,7 @@ input[type="number"].form-control {
   margin-left: -1px;
   display: block;
   text-align: center;
-  border-right: 1px solid #007aff;
+  border-right: 1px solid #2dbb69;
   font-size: 14px;
   line-height: 1.6;
   overflow: hidden;
@@ -4566,7 +4544,7 @@ input[type="number"].form-control {
   white-space: nowrap;
   padding: 3px 0;
   text-decoration: none;
-  color: #007aff;
+  color: #2dbb69;
   transition: all ease .3s;
 }
 .um-tabbar > li:last-child > a {
@@ -4580,7 +4558,7 @@ input[type="number"].form-control {
 }
 .um-tabbar > li.active > a {
   color: #fff;
-  background-color: #007aff;
+  background-color: #2dbb69;
 }
 
 .um-tabbar-underline {
@@ -4593,13 +4571,13 @@ input[type="number"].form-control {
   color: #777777;
 }
 .um-tabbar-underline > li.active {
-  color: #007aff;
+  color: #2dbb69;
   background-color: transparent;
-  border-bottom: 2px solid #007aff;
+  border-bottom: 2px solid #2dbb69;
 }
 .um-tabbar-underline > li.active > a {
   background-color: transparent;
-  color: #007aff;
+  color: #2dbb69;
 }
 
 .um-tabbar-foot {
@@ -4629,7 +4607,7 @@ input[type="number"].form-control {
   transition: color ease .4s;
 }
 .um-tabbar-item:active, .um-tabbar-item.active {
-  color: #007aff;
+  color: #2dbb69;
 }
 .um-tabbar-item img {
   margin: 0 auto;
@@ -4742,7 +4720,7 @@ input[type=range]::-webkit-slider-thumb:before {
   font-weight: bold;
 }
 .um-modal .um-modal-btns .btn:visited, .um-modal .um-modal-btns .btn-bg:visited, .um-modal .um-modal-btns .um-btn:visited {
-  color: #007aff;
+  color: #2dbb69;
 }
 .um-modal .um-modal-btns .btn:first-child, .um-modal .um-modal-btns .btn-bg:first-child, .um-modal .um-modal-btns .um-btn:first-child {
   border-bottom-left-radius: 12px;
@@ -4759,7 +4737,7 @@ input[type=range]::-webkit-slider-thumb:before {
   height: 31.9px;
 }
 .um-modal .form-control:focus {
-  border-color: #007aff;
+  border-color: #2dbb69;
   box-shadow: none;
 }
 .um-modal.um-modal-in {
@@ -4794,7 +4772,7 @@ input[type=range]::-webkit-slider-thumb:before {
   border-bottom: 1px solid #ddd;
 }
 .um-table-container thead > tr {
-  background-color: #007aff;
+  background-color: #2dbb69;
   color: #fff;
   font-weight: 500;
 }
@@ -4964,11 +4942,11 @@ input[type=range]::-webkit-slider-thumb:before {
   width: auto;
   line-height: 1;
   color: #fff;
-  background-color: #007aff;
-  border-color: #007aff;
+  background-color: #2dbb69;
+  border-color: #2dbb69;
 }
 .um-input-group .btn .badge, .um-input-group .btn-bg .badge, .um-input-group .um-btn .badge {
-  color: #007aff;
+  color: #2dbb69;
   background-color: #fff;
 }
 .um-input-group .btn:first-child, .um-input-group .btn-bg:first-child, .um-input-group .um-btn:first-child {
@@ -5001,7 +4979,7 @@ input[type=range]::-webkit-slider-thumb:before {
   top: 0;
   padding: 11px 11px;
   z-index: 5;
-  color: #007aff;
+  color: #2dbb69;
   font-weight: bold;
 }
 .um-input-group span[class^="ti-"] + input.form-control {
@@ -5042,7 +5020,7 @@ input[type=range]::-webkit-slider-thumb:before {
   line-height: 23.8px;
   color: #fff;
   text-align: center;
-  background-color: #007aff;
+  background-color: #2dbb69;
   box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   transition: width .6s ease;
 }
@@ -5205,7 +5183,7 @@ input[type=range]::-webkit-slider-thumb:before {
   text-align: center;
 }
 .um-nav-item:active, .um-nav-item.active {
-  color: #007aff;
+  color: #2dbb69;
 }
 
 .um-grade {
@@ -5240,7 +5218,7 @@ input[type=range]::-webkit-slider-thumb:before {
 }
 
 .um-picker {
-  color: #007aff;
+  color: #2dbb69;
 }
 
 /*# sourceMappingURL=iuapmobile.um.css.map */
